--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Weekly Code & Design Inspiration">
+  <meta name="description" content="Code & Design Inspiration Weekly">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Chanya Le Papillon">
   <link rel="shortcut icon" type="image/png" href="images/chanya_lepapillon_01.png"/>
