--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
         <td>Angular</td>
         <td>
           <img src="images/star.png" alt="star" width="20px">
+          <img src="images/star.png" alt="star" width="20px">
         </td>
       </tr>
     </table>
